moved CS50 pictures to public folder

--- a/src/content/docs/introduction/whoami.mdx
+++ b/src/content/docs/introduction/whoami.mdx
@@ -13,8 +13,8 @@ I have 2+ years of experience with Linux, scripting and hacking and have rooted 
 
 - Offensive Security Certified Proffesional [(OSCP)](https://credentials.offsec.com/bf00f5f5-04bb-410e-9694-3a16608eea5c#acc.KPawM84R) & [(OSCP+)](https://credentials.offsec.com/7df2784c-e2f3-4b17-89c6-53453e8f6386#acc.s46AZBj3)
 - Network Penetration Testing Essentials [(PEN-100)](https://credentials.offsec.com/46f643da-caa6-440e-8b03-294b19228e6d#acc.iLmaNPRV)
-- CS50’s Introduction to Programming with Python [(CS50P)](/src/assets/CS50P%20Certificate.png)
-- CS50: Introduction to Computer Science [(CS50X)](/src/assets/CS50x%20Certificate.png)
+- CS50’s Introduction to Programming with Python [(CS50P)](/assets/CS50P%20Certificate.png)
+- CS50: Introduction to Computer Science [(CS50X)](/assets/CS50x%20Certificate.png)
 
 ## Work Experience
 
